# gen/http/books/server/encode_decode.go
@@ -10,6 +10,7 @@ package server
 import (
 	books "books/gen/books"
 	"context"
+	"errors"
 	"io"
 	"net/http"
 	"strconv"
@@ -196,15 +197,107 @@ func DecodeDeleteBookRequest(mux goahttp.Muxer, decoder func(*http.Request) goah
 	}
 }
 
+// EncodeUploadResponse returns an encoder for responses returned by the books
+// upload endpoint.
+func EncodeUploadResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		w.WriteHeader(http.StatusNoContent)
+		return nil
+	}
+}
+
+// DecodeUploadRequest returns a decoder for requests sent to the books upload
+// endpoint.
+func DecodeUploadRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (any, error) {
+	return func(r *http.Request) (any, error) {
+		var (
+			dir         string
+			contentType string
+			err         error
+
+			params = mux.Vars(r)
+		)
+		dir = params["dir"]
+		contentTypeRaw := r.Header.Get("Content-Type")
+		if contentTypeRaw != "" {
+			contentType = contentTypeRaw
+		} else {
+			contentType = "multipart/form-data; boundary=goa"
+		}
+		err = goa.MergeErrors(err, goa.ValidatePattern("content_type", contentType, "multipart/[^;]+; boundary=.+"))
+		if err != nil {
+			return nil, err
+		}
+		payload := NewUploadPayload(dir, contentType)
+
+		return payload, nil
+	}
+}
+
+// EncodeUploadError returns an encoder for errors returned by the upload books
+// endpoint.
+func EncodeUploadError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+	encodeError := goahttp.ErrorEncoder(encoder, formatter)
+	return func(ctx context.Context, w http.ResponseWriter, v error) error {
+		var en goa.GoaErrorNamer
+		if !errors.As(v, &en) {
+			return encodeError(ctx, w, v)
+		}
+		switch en.GoaErrorName() {
+		case "invalid_media_type":
+			var res *goa.ServiceError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewUploadInvalidMediaTypeResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusBadRequest)
+			return enc.Encode(body)
+		case "invalid_multipart_request":
+			var res *goa.ServiceError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewUploadInvalidMultipartRequestResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusBadRequest)
+			return enc.Encode(body)
+		case "internal_error":
+			var res *goa.ServiceError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewUploadInternalErrorResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusInternalServerError)
+			return enc.Encode(body)
+		default:
+			return encodeError(ctx, w, v)
+		}
+	}
+}
+
 // marshalBooksBookToBookResponse builds a value of type *BookResponse from a
 // value of type *books.Book.
 func marshalBooksBookToBookResponse(v *books.Book) *BookResponse {
 	res := &BookResponse{
 		ID:          v.ID,
-		Title:       v.Title,
-		Author:      v.Author,
-		BookCover:   v.BookCover,
-		PublishedAt: v.PublishedAt,
+		Title:       *v.Title,
+		Author:      *v.Author,
+		BookCover:   *v.BookCover,
+		PublishedAt: *v.PublishedAt,
 	}
 
 	return res
@@ -218,10 +311,10 @@ func unmarshalBookRequestBodyToBooksBook(v *BookRequestBody) *books.Book {
 	}
 	res := &books.Book{
 		ID:          v.ID,
-		Title:       *v.Title,
-		Author:      *v.Author,
-		BookCover:   *v.BookCover,
-		PublishedAt: *v.PublishedAt,
+		Title:       *&v.Title,
+		Author:      *&v.Author,
+		BookCover:   *&v.BookCover,
+		PublishedAt: *&v.PublishedAt,
 	}
 
 	return res
