# gen/http/books/server/types.go
@@ -83,6 +83,61 @@ type GetBookResponseBody struct {
 	PublishedAt string `form:"publishedAt" json:"publishedAt" xml:"publishedAt"`
 }
 
+// UploadInvalidMediaTypeResponseBody is the type of the "books" service
+// "upload" endpoint HTTP response body for the "invalid_media_type" error.
+type UploadInvalidMediaTypeResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// UploadInvalidMultipartRequestResponseBody is the type of the "books" service
+// "upload" endpoint HTTP response body for the "invalid_multipart_request"
+// error.
+type UploadInvalidMultipartRequestResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// UploadInternalErrorResponseBody is the type of the "books" service "upload"
+// endpoint HTTP response body for the "internal_error" error.
+type UploadInternalErrorResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
 // BookResponse is used to define fields on response body types.
 type BookResponse struct {
 	// Unique ID of the book
@@ -116,10 +171,10 @@ type BookRequestBody struct {
 func NewCreateResponseBody(res *books.Book) *CreateResponseBody {
 	body := &CreateResponseBody{
 		ID:          res.ID,
-		Title:       res.Title,
-		Author:      res.Author,
-		BookCover:   res.BookCover,
-		PublishedAt: res.PublishedAt,
+		Title:       *res.Title,
+		Author:      *res.Author,
+		BookCover:   *res.BookCover,
+		PublishedAt: *res.PublishedAt,
 	}
 	return body
 }
@@ -139,10 +194,10 @@ func NewAllResponseBody(res []*books.Book) AllResponseBody {
 func NewUpdateBookResponseBody(res *books.Book) *UpdateBookResponseBody {
 	body := &UpdateBookResponseBody{
 		ID:          res.ID,
-		Title:       res.Title,
-		Author:      res.Author,
-		BookCover:   res.BookCover,
-		PublishedAt: res.PublishedAt,
+		Title:       *res.Title,
+		Author:      *res.Author,
+		BookCover:   *res.BookCover,
+		PublishedAt: *res.PublishedAt,
 	}
 	return body
 }
@@ -152,10 +207,52 @@ func NewUpdateBookResponseBody(res *books.Book) *UpdateBookResponseBody {
 func NewGetBookResponseBody(res *books.Book) *GetBookResponseBody {
 	body := &GetBookResponseBody{
 		ID:          res.ID,
-		Title:       res.Title,
-		Author:      res.Author,
-		BookCover:   res.BookCover,
-		PublishedAt: res.PublishedAt,
+		Title:       *res.Title,
+		Author:      *res.Author,
+		BookCover:   *res.BookCover,
+		PublishedAt: *res.PublishedAt,
+	}
+	return body
+}
+
+// NewUploadInvalidMediaTypeResponseBody builds the HTTP response body from the
+// result of the "upload" endpoint of the "books" service.
+func NewUploadInvalidMediaTypeResponseBody(res *goa.ServiceError) *UploadInvalidMediaTypeResponseBody {
+	body := &UploadInvalidMediaTypeResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewUploadInvalidMultipartRequestResponseBody builds the HTTP response body
+// from the result of the "upload" endpoint of the "books" service.
+func NewUploadInvalidMultipartRequestResponseBody(res *goa.ServiceError) *UploadInvalidMultipartRequestResponseBody {
+	body := &UploadInvalidMultipartRequestResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewUploadInternalErrorResponseBody builds the HTTP response body from the
+// result of the "upload" endpoint of the "books" service.
+func NewUploadInternalErrorResponseBody(res *goa.ServiceError) *UploadInternalErrorResponseBody {
+	body := &UploadInternalErrorResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
 	}
 	return body
 }
@@ -164,10 +261,10 @@ func NewGetBookResponseBody(res *books.Book) *GetBookResponseBody {
 func NewCreateBook(body *CreateRequestBody) *books.Book {
 	v := &books.Book{
 		ID:          body.ID,
-		Title:       *body.Title,
-		Author:      *body.Author,
-		BookCover:   *body.BookCover,
-		PublishedAt: *body.PublishedAt,
+		Title:       &*body.Title,
+		Author:      &*body.Author,
+		BookCover:   &*body.BookCover,
+		PublishedAt: &*body.PublishedAt,
 	}
 
 	return v
@@ -196,6 +293,15 @@ func NewGetBookPayload(id int) *books.GetBookPayload {
 func NewDeleteBookPayload(id int) *books.DeleteBookPayload {
 	v := &books.DeleteBookPayload{}
 	v.ID = &id
+
+	return v
+}
+
+// NewUploadPayload builds a books service upload endpoint payload.
+func NewUploadPayload(dir string, contentType string) *books.UploadPayload {
+	v := &books.UploadPayload{}
+	v.Dir = dir
+	v.ContentType = contentType
 
 	return v
 }
