# gen/http/openapi3.yaml
@@ -32,7 +32,22 @@ paths:
                                       bookCover: Aut eligendi repudiandae repellat.
                                       publishedAt: Qui ut et quo est omnis dolor.
                                       title: Ut rerum aliquid.
+                                    - ID: 4716645499305038111
+                                      author: Mollitia assumenda explicabo impedit nesciunt.
+                                      bookCover: Aut eligendi repudiandae repellat.
+                                      publishedAt: Qui ut et quo est omnis dolor.
+                                      title: Ut rerum aliquid.
+                                    - ID: 4716645499305038111
+                                      author: Mollitia assumenda explicabo impedit nesciunt.
+                                      bookCover: Aut eligendi repudiandae repellat.
+                                      publishedAt: Qui ut et quo est omnis dolor.
+                                      title: Ut rerum aliquid.
                             example:
+                                - ID: 4716645499305038111
+                                  author: Mollitia assumenda explicabo impedit nesciunt.
+                                  bookCover: Aut eligendi repudiandae repellat.
+                                  publishedAt: Qui ut et quo est omnis dolor.
+                                  title: Ut rerum aliquid.
                                 - ID: 4716645499305038111
                                   author: Mollitia assumenda explicabo impedit nesciunt.
                                   bookCover: Aut eligendi repudiandae repellat.
@@ -87,9 +102,9 @@ paths:
                   schema:
                     type: integer
                     description: Book ID
-                    example: 8401032869637148523
+                    example: 1579742446328591467
                     format: int64
-                  example: 7336466431814026404
+                  example: 6714983423332796599
             responses:
                 "204":
                     description: No Content response.
@@ -106,9 +121,9 @@ paths:
                   schema:
                     type: integer
                     description: Book ID
-                    example: 5088798499266199857
+                    example: 628467748934689669
                     format: int64
-                  example: 5958733691908977449
+                  example: 197665409686889088
             responses:
                 "200":
                     description: OK response.
@@ -135,9 +150,9 @@ paths:
                   schema:
                     type: integer
                     description: Book ID
-                    example: 3492697522237773608
+                    example: 46648966789331838
                     format: int64
-                  example: 5838317197026300858
+                  example: 7295801369676200130
             requestBody:
                 required: true
                 content:
@@ -173,6 +188,49 @@ paths:
             responses:
                 "200":
                     description: File downloaded
+    /upload/{dir}:
+        post:
+            tags:
+                - books
+            summary: upload books
+            operationId: books#upload
+            parameters:
+                - name: dir
+                  in: path
+                  description: Dir is the relative path to the file directory where the uploaded content is saved.
+                  required: true
+                  schema:
+                    type: string
+                    description: Dir is the relative path to the file directory where the uploaded content is saved.
+                    default: upload
+                    example: upload
+                  example: upload
+                - name: Content-Type
+                  in: header
+                  description: Content-Type header, must define value for multipart boundary.
+                  allowEmptyValue: true
+                  schema:
+                    type: string
+                    description: Content-Type header, must define value for multipart boundary.
+                    default: multipart/form-data; boundary=goa
+                    example: multipart/form-data; boundary=goa
+                    pattern: multipart/[^;]+; boundary=.+
+                  example: multipart/form-data; boundary=goa
+            responses:
+                "204":
+                    description: No Content response.
+                "400":
+                    description: 'invalid_multipart_request: Error returned when the request body is not a valid multipart content.'
+                    content:
+                        application/vnd.goa.error:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+                "500":
+                    description: 'internal_error: Fault while processing upload.'
+                    content:
+                        application/vnd.goa.error:
+                            schema:
+                                $ref: '#/components/schemas/Error'
 components:
     schemas:
         CreateRequestBody:
@@ -181,35 +239,77 @@ components:
                 ID:
                     type: integer
                     description: Unique ID of the book
-                    example: 3053542106201439437
+                    example: 5088798499266199857
                     format: int64
                 author:
                     type: string
                     description: Author of the book
-                    example: Consequatur totam culpa.
+                    example: Quia accusamus dolorum omnis.
                 bookCover:
                     type: string
                     description: Cover of the book
-                    example: Culpa in qui.
+                    example: Dolores recusandae reiciendis.
                 publishedAt:
                     type: string
                     description: Date the book has been published
-                    example: Officia exercitationem.
+                    example: Consequatur ipsam at quia.
                 title:
                     type: string
                     description: Title of the book
-                    example: Occaecati eaque nulla consequuntur delectus atque.
+                    example: Sed aperiam.
             example:
-                ID: 5363652407402971893
-                author: Aperiam veritatis.
-                bookCover: Porro natus quos.
-                publishedAt: Sit ipsam.
-                title: Eos quia.
+                ID: 6230135417023330466
+                author: Et ducimus magnam.
+                bookCover: Porro aut officia iure omnis nemo.
+                publishedAt: Sed et voluptate ad.
+                title: Aut asperiores maiores.
             required:
                 - title
                 - author
                 - bookCover
                 - publishedAt
+        Error:
+            type: object
+            properties:
+                fault:
+                    type: boolean
+                    description: Is the error a server-side fault?
+                    example: false
+                id:
+                    type: string
+                    description: ID is a unique identifier for this particular occurrence of the problem.
+                    example: 123abc
+                message:
+                    type: string
+                    description: Message is a human-readable explanation specific to this occurrence of the problem.
+                    example: parameter 'p' must be an integer
+                name:
+                    type: string
+                    description: Name is the name of this class of errors.
+                    example: bad_request
+                temporary:
+                    type: boolean
+                    description: Is the error temporary?
+                    example: true
+                timeout:
+                    type: boolean
+                    description: Is the error a timeout?
+                    example: false
+            description: Error returned when the Content-Type header does not define a multipart request.
+            example:
+                fault: true
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: true
+                timeout: false
+            required:
+                - name
+                - id
+                - message
+                - temporary
+                - timeout
+                - fault
         UpdateBookRequestBody:
             type: object
             properties:
